--- a/skills/open-data-quality/scripts/pyproject.toml
+++ b/skills/open-data-quality/scripts/pyproject.toml
@@ -9,7 +9,7 @@ description = "Open data quality validator for CSV files and CKAN portals (DCAT-
 requires-python = ">=3.11"
 dependencies = [
     "duckdb>=1.0.0",
-    "chardet>=5.0.0",
+    "charset-normalizer>=3.0.0",
     "httpx>=0.27.0",
     "rich>=13.0.0",
     "typer>=0.12.0",
